--- a/views/contact.gohtml
+++ b/views/contact.gohtml
@@ -1,5 +1,5 @@
 <h1>Get in Touch</h1>
-<p>"To get in touch, please send an email to 
+<p>To get in touch, please send an email to 
   <a href="mailto:support@lenslocked.com\">
     support@lenslocked.com
   </a>.
