--- a/views/contact.gohtml
+++ b/views/contact.gohtml
@@ -1,8 +1,12 @@
+{{define "yield"}}
+
 <h1>Get in Touch</h1>
-<p>To get in touch, please send an email to 
-  <a href="mailto:support@lenslocked.com\">
-    support@lenslocked.com
-  </a>.
+<p>To get in touch, please send an email to
+    <a href="mailto:support@lenslocked.com\">
+        support@lenslocked.com
+    </a>.
 </p>
 
 {{template "footer"}}
+
+{{end}}
