--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -11,8 +11,9 @@
     
     <div class="container-fluid">
       {{template "yield" .}}
+      {{template "footer"}}
     </div>
-
+      
     <!-- jquery & Bootstrap JS -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
     </script>
