--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -16,7 +16,11 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/contact">Contact</a></li>
-        <li><a href="/signup">Signup</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/signup">Sign Up</a></li>
+      </ul>
+
       </ul>
     </div>
   </div>
