--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -19,6 +19,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/signup">Sign Up</a></li>
+         <li><a href="/login">Log In</a></li>
       </ul>
 
       </ul>
