--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -8,12 +8,13 @@
 
   <body>
     {{template "navbar"}}
-    
+
     <div class="container-fluid">
+      {{template "alert"}}
       {{template "yield" .}}
       {{template "footer"}}
     </div>
-      
+
     <!-- jquery & Bootstrap JS -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
     </script>
