rendered a dynamic alert!!!!

--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -10,7 +10,7 @@
     {{template "navbar"}}
 
     <div class="container-fluid">
-      {{template "alert"}}
+      {{template "alert" .}}
       {{template "yield" .}}
       {{template "footer"}}
     </div>
