--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -1,27 +1,24 @@
-{{define "bootstrap"}}
-<!DOCTYPE html>
+{{define "bootstrap"}} <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>LensLocked.com</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     {{template "navbar"}}
 
     <div class="container-fluid">
-      {{if.Alert}}
-        {{template "alert" .Alert}}
-      {{end}}
-      {{template "yield" .Yield}}
-      {{template "footer"}}
+      {{if.Alert}} {{template "alert" .Alert}} {{ end }}
+      {{template "yield" .Yield}} {{template "footer"}}
     </div>
 
     <!-- jquery & Bootstrap JS -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-    </script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
-    </script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
-{{end}}
+{{ end }}
