--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    {{template "navbar"}}
+    {{template "navbar" .}}
 
     <div class="container-fluid">
       {{if.Alert}} {{template "alert" .Alert}} {{ end }}
