--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -16,6 +16,10 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/contact">Contact</a></li>
+        {{if .User}}
+        <li><a href="/galleries">Galleries</a></li>
+
+        {{end}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/signup">Sign Up</a></li>
@@ -26,4 +30,5 @@
     </div>
   </div>
 </nav>
+
 {{end}}
