--- a/views/galleries/show.gohtml
+++ b/views/galleries/show.gohtml
@@ -2,7 +2,13 @@
 <div class="row">
   <div class="col-md-12">
     <h1>{{.Title}}</h1>
-    <p>images coming soon!</p>
+    <ul>
+      {{range .Images}}
+      <li>
+        {{.}}
+      </li>
+      {{end}}
+    </ul>
   </div>
 </div>
 {{ end }}
