created a static file handler for images and made some html and go methods to make rendering images more uniform

--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -74,11 +74,19 @@
 {{end}}
 
 {{define "galleryImages"}}
-<ul>
-    {{range .Images}}
-    <li>
-      {{.}}
-    </li>
-    {{end}}
-  </ul>
+{{range .ImagesSplitN 6}}
+    
+<div class="col-md-5">
+  {{range .}}
+  <a href="{{.}}">
+<img src="{{.}}" class="thumbnail"/>
+</a>
+{{end}}
+  </div>
+{{end}}
+<style>
+    .thumbnail {
+      width: 100%
+    }
+    </style>
 {{end}}
