--- a/views/galleries/show.gohtml
+++ b/views/galleries/show.gohtml
@@ -2,13 +2,25 @@
 <div class="row">
   <div class="col-md-12">
     <h1>{{.Title}}</h1>
-    <ul>
-      {{range .Images}}
-      <li>
-        {{.}}
-      </li>
-      {{end}}
-    </ul>
+    <hr>
+  </div>
+  <div class="row">
+    {{range .ImagesSplitN 3}}
+    
+<div class="col-md-4">
+  {{range .}}
+  <a href="{{.}}">
+<img src="{{.}}" class="thumbnail"/>
+</a>
+{{end}}
+  </div>
+{{end}}
   </div>
 </div>
+
+<style>
+.thumbnail {
+  width: 100%
+}
+</style>
 {{ end }}
