--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -5,7 +5,8 @@
     <link
       href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
       rel="stylesheet"
-    />
+      />
+    <link href="/assets/styles.css" rel="stylesheet">
   </head>
 
   <body>
@@ -19,11 +20,6 @@
     <!-- jquery & Bootstrap JS -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <style>
-      footer {
-        padding-top:60px
-      }
-    </style>
   </body>
 </html>
 {{ end }}
