--- a/views/galleries/show.gohtml
+++ b/views/galleries/show.gohtml
@@ -1,21 +1,21 @@
 {{define "yield"}}
 <div class="row">
   <div class="col-md-12">
-    <h1>{{.Title}}</h1>
+    <h1>
+      {{.Title}}
+    </h1>
     <hr>
   </div>
-  <div class="row">
-    {{range .ImagesSplitN 3}}
-    
-<div class="col-md-4">
-  {{range .}}
-  <a href="{{.}}">
-<img src="{{.}}" class="thumbnail"/>
-</a>
-{{end}}
-  </div>
-{{end}}
-  </div>
 </div>
-
-{{ end }}
+<div class="row">
+  {{range .ImagesSplitN 3}}
+    <div class="col-md-4">
+      {{range .}}
+        <a href="{{.Path}}">
+          <img src="{{.Path}}" class="thumbnail">
+        </a>
+      {{end}}
+    </div>
+  {{end}}
+</div>
+{{end}}
