--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -22,8 +22,12 @@
         {{end}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/signup">Sign Up</a></li>
+	{{if .User}}
+		<li>{{template "logoutForm"}}</li>
+	{{else}}
+	 <li><a href="/signup">Sign Up</a></li>
          <li><a href="/login">Log In</a></li>
+      	{{end}}
       </ul>
 
       </ul>
@@ -31,4 +35,11 @@
   </div>
 </nav>
 
+{{end}}
+
+{{define "logoutForm"}}
+<form class="navbar-form navbar-left" action="/logout" method="POST">
+	{{csrfField}}
+	<button type="submit" class="btn btn-default">Log out</button>
+</form>
 {{end}}
