--- a/views/users/forgot_pw.gohtml
+++ b/views/users/forgot_pw.gohtml
@@ -3,9 +3,12 @@
   <div class="col-md-8 col-md-offset-2">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title">Forgot Your Password</h3>
+        <h3 class="panel-title">Forgot Your Password?</h3>
       </div>
       <div class="panel-body">{{template "forgotPwForm" .}}</div>
+      <div class="panel-footer">
+        <a href="/login">Remember your password?</a>
+      </div>
     </div>
   </div>
 </div>
@@ -14,7 +17,6 @@
 {{define "forgotPwForm"}}
 <form action="/forgot" method="POST">
   {{ csrfField }}
-
   <div class="form-group">
     <label for="email">Email address</label>
     <input
@@ -26,7 +28,6 @@
       value="{{.Email}}"
     />
   </div>
-
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 {{ end }}
