--- a/views/users/login.gohtml
+++ b/views/users/login.gohtml
@@ -1,31 +1,42 @@
 {{define "yield"}}
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-6 col-md-offset-3">
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title">Welcome Back!</h3>
       </div>
-      <div class="panel-body">
-        {{template "loginForm"}}
+      <div class="panel-body">{{template "loginForm"}}</div>
+      <div class="panel-footer">
+        <a href="/forgot">Forgot your password?</a>
       </div>
     </div>
   </div>
 </div>
-{{end}}
-
+{{ end }}
 
 {{define "loginForm"}}
 <form action="/login" method="POST">
-  {{csrfField}}
-
+  {{ csrfField }}
   <div class="form-group">
     <label for="email">Email address</label>
-    <input type="email" name="email" class="form-control" id="email" placeholder="Email">
+    <input
+      type="email"
+      name="email"
+      class="form-control"
+      id="email"
+      placeholder="Email"
+    />
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+    <input
+      type="password"
+      name="password"
+      class="form-control"
+      id="password"
+      placeholder="Password"
+    />
   </div>
   <button type="submit" class="btn btn-primary">Log In</button>
 </form>
-{{end}}
+{{ end }}
