--- a/views/users/reset_pw.gohtml
+++ b/views/users/reset_pw.gohtml
@@ -6,6 +6,9 @@
         <h3 class="panel-title">Reset Your Password</h3>
       </div>
       <div class="panel-body">{{template "resetPwForm" .}}</div>
+      <div class="panel-footer">
+        <a href="/forgot">Need to request a new token?</a>
+      </div>
     </div>
   </div>
 </div>
@@ -14,19 +17,17 @@
 {{define "resetPwForm"}}
 <form action="/reset" method="POST">
   {{ csrfField }}
-
   <div class="form-group">
-    <label for="name">Reset Token</label>
+    <label for="token">Reset Token</label>
     <input
       type="text"
       name="token"
       class="form-control"
       id="token"
-      placeholder="You will recieve this via email"
+      placeholder="You will receive this via email"
       value="{{.Token}}"
     />
   </div>
-
   <div class="form-group">
     <label for="password">Password</label>
     <input
