--- a/views/galleries/new.gohtml
+++ b/views/galleries/new.gohtml
@@ -5,21 +5,25 @@
       <div class="panel-heading">
         <h3 class="panel-title">Create a gallery</h3>
       </div>
-      <div class="panel-body">
-        {{template "galleryForm"}}
-      </div>
+      <div class="panel-body">{{template "galleryForm"}}</div>
     </div>
   </div>
 </div>
-{{end}}
+{{ end }}
 
 {{define "galleryForm"}}
 <form action="/galleries" method="POST">
-  {{csrfField}}
+  {{ csrfField }}
   <div class="form-group">
     <label for="title">Title</label>
-    <input type="text" name="title" class="form-control" id="title" placeholder="What is the title of your gallery?">
+    <input
+      type="text"
+      name="title"
+      class="form-control"
+      id="title"
+      placeholder="What is the title of your gallery?"
+    />
   </div>
   <button type="submit" class="btn btn-primary">Create</button>
 </form>
-{{end}}
+{{ end }}
